add worker compensation history